--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,34 @@
-.container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: flex-start;
-  align-content: stretch;
-  margin: 0 auto;
-  max-width: 90%;
+body{
+  font-family: 'Montserrat', sans-serif;
 }
-.lane {
-  flex-basis: 33vw
+
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    align-content: stretch;
+    margin: 0 auto;
+    max-width: 90%;
+  }
+  .container div p{
+    border-color:#6181bb;
+    border-style: solid;
+    color: #6181bb;
+
+  }
+  .lane {
+    flex-basis: 33vw
+  }
+
+.progress{
+  font-size: small;
+  margin-bottom: 10px;
+}
+
+#activity{
+
+  color: #6181bb;
+  padding: 10px 10px 10px 10px;
+ 
 }
